# teamscale-claude-marketplace

./: .gitignore  .gitmodules  CLAUDE.md  FutureWork.md  Observations.md  Presentation.md  Presentation.pptx  README.md  comparison.html  comparison.md
.claude-plugin/: marketplace.json
docs/superpowers/plans/: 2026-04-24-pre-commit-skill.md
docs/superpowers/specs/: 2026-04-24-close-test-gaps-skill-design.md  2026-04-24-pre-commit-skill-design.md
plugins/teamscale/: README.md
plugins/teamscale-dev/: README.md
plugins/teamscale-dev/.claude-plugin/: plugin.json
plugins/teamscale-fastmcp-custom/: README.md
plugins/teamscale-fastmcp-custom/.claude-plugin/: plugin.json
plugins/teamscale-fastmcp-custom/server/: README.md  generate-client.sh
plugins/teamscale-fastmcp-openapi/: README.md
plugins/teamscale-fastmcp-openapi/.claude-plugin/: plugin.json
plugins/teamscale-fastmcp-openapi/server/: README.md
plugins/teamscale-python-custom/: README.md  start-server.py
plugins/teamscale-python-custom/.claude-plugin/: plugin.json
plugins/teamscale-python-custom/server/: .gitignore  README.md  pyproject.toml  server.py
plugins/teamscale-python-openapi/: README.md
plugins/teamscale-python-openapi/.claude-plugin/: plugin.json
plugins/teamscale-python-openapi/server/: README.md
plugins/teamscale-skills/: README.md
plugins/teamscale-skills/.claude-plugin/: plugin.json
plugins/teamscale-typescript-custom/: README.md  start-server.js
plugins/teamscale-typescript-custom/.claude-plugin/: plugin.json
tests/: .gitignore  docker-compose.yml
(+18 files in other folders)
